fix (#1229)